test/spec_vectors/align/ok/module_4.wat
(module (memory 0) (func (drop (i32.load align=4 (i32.const 0)))))