test/spec_vectors/align/fail/module_116.wat
(module (memory 1) (func i32.const 0 i32.load offset=18446744073709551615 align=9223372036854775808 drop))